# buy-the-dip-vs-dca-vs-buy-and-hold

./: LICENSE  app.py  investment.py  pyproject.toml
static/css/: style.css
static/js/: analysis-functions.js  main.js
templates/: index.html
