[project]
name = "repl-nix-investcomparepix"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "plotly>=5.24.1",
    "yfinance>=0.2.50",
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "requests",
    "replit>=4.1.0",
]
